--- a/gatsby1.html
+++ b/gatsby1.html
@@ -24,13 +24,13 @@
     <nav>
         <div class="container nav-container">
             <div class="brand-logo">
-                <a href="home.html">
+                <a href="index.html">
                     <img src="img/logo.svg" alt="brand logo">
                 </a>
             </div>
                 <div class="nav-items">
                     <div class="item">
-                        <a href="home.html">home</a>
+                        <a href="index.html">home</a>
                     </div>
                     <div class="item">
                         <a href="about.html">about</a>
